# treeboost_autograd

./: .gitignore  LICENSE  README.md  dev_requirements.txt  pyproject.toml  requirements.txt
catboost_objectives_using_pytorch/: custom_pytorch_objective.py  example_classification.py  example_regression.py
examples/: example_classification.py  example_classification_catboost.py  example_classification_lightgbm.py  example_regression.py  example_regression_catboost.py
tests/: official_catboost_objectives.py  test_booster_objectives.py  test_catboost_objective.py  test_custom_pytorch_objective.py  test_example_classification.py  test_example_regression.py
tests/utils/: derivative_test_params.py  official_catboost_objectives.py
treeboost_autograd/: __init__.py  booster_objectives.py  catboost_objective.py  custom_pytorch_objective.py  example_classification.py  example_classification_xgboost.py  lightgbm_objective.py  pytorch_objective.py  xgboost_objective.py
